--- a/src/MoodBot/style/MoodBotStyle.css
+++ b/src/MoodBot/style/MoodBotStyle.css
@@ -15,26 +15,50 @@
     -fx-alignment: center;
 }
 .chat_pane{
-    -fx-background-color: #cbffbd; //GREEN
+    -fx-background-color: #E3EAFF;
 }
 .menu_bar{
-    -fx-background-color: #cbffbd; //GREEN
+    -fx-background-color: #C9D8FF;
 }
 .contacts{
-    -fx-background-color: #fffebd; //YELLOW
+    -fx-background-color: #E3EAFF;
     -fx-pref-width: 250px;
     -fx-pref-height: 70px;
+    -fx-padding: 25px;
+    
+}
+.contact_view_contact_name{
+    -fx-font: 24px Rockwell;
+}
+.contact_view_last_message{
     
 }
 .scroll_contacts > .viewport{
-    -fx-background-color: #bdecff; //BLUE
+    -fx-background-color: #C9D8FF;
 }
 .scroll_contacts{
     -fx-pref-width: 250px;
     -fx-border-width: 1px;
-    -fx-border-color: black;
+    -fx-border-color: #8DA8F0;
     
 }
 .chat_window{
-    -fx-background-color: #fffebd; //IREELEVANT
+    -fx-padding: 20px;
+}
+.messages{
+    -fx-background-color: #C9D8FF;
+    -fx-pref-height: 600px;
+}
+.scroll_messages > .viewport{
+    -fx-background-color: brown;
+}
+.scroll_messages{
+}
+.input_box{
+    -fx-padding: 20px;
+    -fx-spacing: 20px;
+    -fx-alignment: center;
+}
+.send_button{
+     -fx-alignment: center;
 }
