--- a/src/MoodBot/style/MoodBotStyle.css
+++ b/src/MoodBot/style/MoodBotStyle.css
@@ -7,7 +7,7 @@
     -fx-text-fill: black;
     -fx-font: 30px Rockwell;
     -fx-border-width: 1px;
-    -fx-border-color: black;
+    -fx-border-color: gray;
     -fx-background-color: #f7fc53;
 }
 .menu_buttons_vbox{
@@ -16,15 +16,21 @@
 }
 .chat_pane{
     -fx-background-color: #E3EAFF;
+    -fx-border-width: 1px;
+    -fx-border-color: gray;
 }
 .menu_bar{
     -fx-background-color: #C9D8FF;
+    -fx-border-width: 1px;
+    -fx-border-color: gray;
 }
 .contacts{
     -fx-background-color: #E3EAFF;
     -fx-pref-width: 250px;
     -fx-pref-height: 70px;
     -fx-padding: 25px;
+    -fx-border-width: 1px;
+    -fx-border-color: gray;
     
 }
 .contact_view_contact_name{
@@ -46,19 +52,31 @@
     -fx-padding: 20px;
 }
 .messages{
-    -fx-background-color: #C9D8FF;
     -fx-pref-height: 600px;
+    -fx-spacing: .5px;
 }
 .scroll_messages > .viewport{
-    -fx-background-color: brown;
 }
 .scroll_messages{
+    -fx-padding: 10px 50px 10px 50px;
 }
 .input_box{
     -fx-padding: 20px;
-    -fx-spacing: 20px;
+    -fx-spacing: 5px;
     -fx-alignment: center;
 }
 .send_button{
      -fx-alignment: center;
+}
+.message_view_user{
+    -fx-background-color: #C9D8FF;
+    -fx-pref-width: 500px;
+    -fx-border-width: 1px;
+    -fx-border-color: #8DA8F0;
+}
+.message_view_bot{
+    -fx-background-color: lightpink;
+    -fx-pref-width: 500px;
+    -fx-border-width: 1px;
+    -fx-border-color: #8DA8F0;
 }
