--- a/src/MoodBot/style/MoodBotStyle.css
+++ b/src/MoodBot/style/MoodBotStyle.css
@@ -28,7 +28,6 @@
     -fx-background-color: #E3EAFF;
     -fx-pref-width: 250px;
     -fx-pref-height: 70px;
-    -fx-padding: 25px;
     -fx-border-width: 1px;
     -fx-border-color: gray;
     
@@ -47,6 +46,22 @@
     -fx-border-width: 1px;
     -fx-border-color: #8DA8F0;
     
+}
+.contact_view{
+    -fx-background-color: #8DA8F0;
+    -fx-border-width: 1px;
+    -fx-border-color: #8DA8F0;
+    -fx-pref-width: 250px;
+    -fx-pref-height: 70px;
+    -fx-padding: 20px;
+}
+.selected_contact{
+    -fx-background-color: lightcyan;
+    -fx-border-width: 1px;
+    -fx-border-color: #8DA8F0;
+    -fx-pref-width: 250px;
+    -fx-pref-height: 70px;
+    -fx-padding: 20px;
 }
 .chat_window{
     -fx-padding: 20px;
