--- a/src/MoodBot/style/MoodBotStyle.css
+++ b/src/MoodBot/style/MoodBotStyle.css
@@ -12,6 +12,7 @@
 }
 .menu_buttons_vbox{
     -fx-padding: 20px;
+    -fx-spacing: 10px;
     -fx-alignment: center;
 }
 .chat_pane{
@@ -67,12 +68,13 @@
     -fx-padding: 20px;
 }
 .messages{
-    -fx-pref-height: 600px;
     -fx-spacing: 4px;
 }
 .scroll_messages > .viewport{
+    
 }
 .scroll_messages{
+    -fx-pref-height: 600px;
     -fx-padding: 10px 50px 10px 50px;
 }
 .input_box{
